Implement sales seeding functionality in DataSeeder, enhancing initial data population with diverse sales records. Remove PaymentMethod and SaleStatus enums, and refactor Sale and SaleItem classes to streamline sale management. Update SaleController and SaleService to reflect these changes, improving clarity and maintainability in the sales module.